openshift/deployment-gateway-router-v1.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gateway-router
  labels:
    app: gateway-router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-router
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gateway-router
        deployment: gateway-router
    spec:
      volumes:
        - name: gateway-router
          configMap:
            name: gateway-router
            defaultMode: 420
      containers:
        - name: gateway-router
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: gateway-router
              mountPath: /home/default/resource
          terminationMessagePolicy: File
          image: 'image-registry.openshift-image-registry.svc:5000/test-headless/gateway-router'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 0
  progressDeadlineSeconds: 600
