openshift/svc-gateway-router.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway-router
  name: gateway-router
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: gateway-router
  sessionAffinity: None
  type: ClusterIP
