openshift/route-gateway-router.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gateway-router
spec:
  host: gateway-router-test-headless.apps-crc.testing
  path: /
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: gateway-router
    weight: 100
  wildcardPolicy: None
